Adds missing CEURGUIDEs

--- a/dokieli/Vol-XXX/index.html
+++ b/dokieli/Vol-XXX/index.html
@@ -208,7 +208,7 @@
 
                     <section>
                         <h3 class="CEURSESSION">Session 3: Another Session</h3>
-<pre># The following are examples of papers without page numbers</pre>
+<pre class="CEURGUIDE"># The following are examples of papers without page numbers</pre>
                         <ul>
                             <li id="paper4">
                                 <a class="CEURTITLE" href="paper4.pdf">In Medias Res</a>
@@ -221,7 +221,7 @@
                                 <span class="CEURAUTHOR">Peter Müstermann</span>
                             </li>
 
-<pre># The subsequent paper points to a subdirectory that contains the paper,
+<pre class="CEURGUIDE"># The subsequent paper points to a subdirectory that contains the paper,
 # possible data sets and other material that is regarded as part of the paper.
 # Use the model of this subdirectory if you want to give authors the opportunity
 # to publish more than just the paper PDF. The size of the complete proceedings
