Realigns TOC for screen/print

--- a/dokieli/Vol-XXX/index.html
+++ b/dokieli/Vol-XXX/index.html
@@ -106,7 +106,7 @@
                 <p>CONF/WORKSHOP allows authors to submit their paper either in English or in Russian.</p>
             </div>
 
-            <div id="content">
+            <div id="content" class="CEURTOC">
 <pre class="CEURGUIDE"># Instructions for Table of Contents
 # The table of contents normally is a plain list of papers (with titles/authors).
 # The paper title should be linked to the paper URL (usually pdf).
@@ -127,7 +127,7 @@
 # the name of the file linked to, just without the filename extension.
 # This allows the table of contents entries to be linked to.
 # </pre>
-                <div class="CEURTOC">
+                <div>
                     <ul>
                         <li id="preface"><a href="preface.pdf">Preface</a></li>
                     </ul>
