Adds a break so that when no pre it'll render as intended

--- a/dokieli/Vol-XXX/index.html
+++ b/dokieli/Vol-XXX/index.html
@@ -79,7 +79,7 @@
             <h1><a class="CEURVOLACRONYM" href="http://www.workshop-website.org/loc">NNNN YYYY</a> <span class="CEURVOLTITLE">Publishing Papers with CEUR-WS</span></h1>
 
             <div id="document-event">
-                <span class="CEURFULLTITLE">Proceedings of the Workshop on Publishing Papers with CEUR-WS</span>
+                <span class="CEURFULLTITLE">Proceedings of the Workshop on Publishing Papers with CEUR-WS</span><br/>
 <pre class="CEURGUIDE"># delete one of the following two CEURCOLOCATED lines:</pre>
                 <!-- co-located with <span class="CEURCOLOCATED">NONE</span> -->
                 <span class="CEURCOLOCATEDDESCRIPTION">co-located with 10th International Conference on Online Publishing (<span class="CEURCOLOCATED"><!--<a href="http://yyyy.example.org/">-->OPub YYYY<!--</a>--></span>)</span><br/>
