--- a/dokieli/Vol-XXX/index-no-pre.html
+++ b/dokieli/Vol-XXX/index-no-pre.html
@@ -24,7 +24,7 @@
             <h1><a class="CEURVOLACRONYM" href="http://www.workshop-website.org/loc">NNNN YYYY</a> <span class="CEURVOLTITLE">Publishing Papers with CEUR-WS</span></h1>
 
             <div id="document-event">
-                <span class="CEURFULLTITLE">Proceedings of the Workshop on Publishing Papers with CEUR-WS</span>
+                <span class="CEURFULLTITLE">Proceedings of the Workshop on Publishing Papers with CEUR-WS</span><br/>
                 <!-- co-located with <span class="CEURCOLOCATED">NONE</span> -->
                 <span class="CEURCOLOCATEDDESCRIPTION">co-located with 10th International Conference on Online Publishing (<span class="CEURCOLOCATED"><!--<a href="http://yyyy.example.org/">-->OPub YYYY<!--</a>--></span>)</span><br/>
                 <span class="CEURLOCATION">City, Country</span>,
